# tweetide

./: .gitignore  Cargo.toml  README.md  config.toml
migrations/2019-07-20-214845_users/: up.sql
src/: config.rs  main.rs  schema.rs  users.rs
src/db/: mod.rs  user_model.rs
