[package]
name = "tweetide"
version = "0.1.0"
authors = ["Shady Khalifa <shekohex@gmail.com>"]
edition = "2018"
description = "A Simple Twitter Clone Built with Tide"
publish = false
readme = "README.md"
license = "MIT"

[dependencies]
tide = { version = "0.2.0", default-features = false, features = ["hyper"] }
serde = { version = "^1.0", features = ["derive"] }
config = "0.9.3"
diesel = { version = "1.4.6", features = ["sqlite", "chrono"] }
failure = "0.1.5"
serde_json = "1.0.40"
chrono = {  version =  "0.4.7", features = ["serde"] }
bcrypt = "0.5.0"
parking_lot = "0.9.0"
